<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageList"
    android:orientation="vertical"
    android:background="@color/frc"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp">
    <RadioButton
        android:id="@+id/language1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l1"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l2"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language3_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l3"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language4_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l4"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language5_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l5"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language6_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l6"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language7_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l7"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language8_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l8"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language9_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l9"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language10_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l10"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
    <RadioButton
        android:id="@+id/language11_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l11"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"/>
        <Button
            android:id="@+id/languageSubmit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="Submit"/>


</LinearLayout>

</LinearLayout>