<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/frc"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="7"
    tools:context=".dashboard">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/linearlayout"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:orientation="horizontal"
                android:paddingLeft="2dp"
                android:paddingTop="10dp"

                android:paddingRight="2dp"
                android:paddingBottom="55dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_weight="3"
                    app:srcCompat="@drawable/firstbg" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/placeview"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:clickable="true">


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/place_background"
                            android:padding="10dp"
                            android:src="@drawable/place_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/option1"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textSize="25dp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/findView"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/find_background"
                            android:padding="10dp"
                            android:src="@drawable/find" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/option2"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textSize="25dp" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/workView"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/place_background"
                            android:padding="10dp"
                            android:src="@drawable/work_icon" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/option3"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textSize="25dp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/emergency_view"
                    android:layout_width="0dp"

                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/find_background"
                            android:padding="10dp"
                            android:src="@drawable/sign_in" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/option5"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textSize="25dp" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>




        </LinearLayout>

    </ScrollView>
</LinearLayout>